syntax = "proto3";
import "google/protobuf/timestamp.proto";

package event;

service EventService {
    rpc ListEvents (ListEventsRequest) returns (ListEventsResponse);
    rpc GetEvent (GetEventRequest) returns (CommonResponse);
    rpc CreateEvent (CreateEventRequest) returns (CommonResponse);
    rpc UpdateEvent (UpdateEventRequest) returns (CommonResponse);
    rpc DeleteEvent (DeleteEventRequest) returns (CommonResponse);
    rpc ClaimEventReward (ClaimEventRewardRequest) returns (CommonResponse);
}

message ClaimEventRewardRequest {
    string username = 1;
    string event_id = 2;
}

message ListEventsRequest {
    int32 page = 1;
    int32 limit = 2;
    optional bool filter_active = 3;
    optional string filter_type = 4;
}

message GetEventRequest {
    string event_id = 1;
}

message CreateEventRequest {
    string type = 1;
    string title = 2;
    optional string description = 3;
    int32 target_criteria = 4;
    repeated string reward_ids = 5;
}

message UpdateEventRequest {
    string event_id = 1;
    string type = 2;
    string title = 3;
    bool active = 4;
    int32 target_criteria = 5;
    optional string description = 6;
    repeated string reward_ids = 7;
}

message DeleteEventRequest {
    string event_id = 1;
}

message ListEventsResponse {
    int32 page = 1;
    int32 limit = 2;
    int32 total = 3;
    optional bool filter_active = 4;
    optional string filter_type = 5;
    repeated EventResponse list = 6;
}

message CommonResponse {
    bool result = 1;
    optional string message = 2;
    oneof data {
        EventResponse event_response = 3;
    }
}

message Reward {
    string reward_id = 1;
    string type = 2;
    string title = 3;
    optional string description = 4;
    optional int32 point = 5;
    repeated string coupons = 6;
    repeated string items = 7;
    bool active = 8;
}

message EventResponse {
    string event_id = 1;
    string type = 2;
    string title = 3;
    optional string description = 4;
    int32 target_criteria = 5;
    repeated Reward rewards = 6;
    bool active = 7;
    google.protobuf.Timestamp created_at = 8;
    optional google.protobuf.Timestamp updated_at = 9;
}
